--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,90 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.loadingBlock {
+  width: 80%;
+  margin: 0 auto;
+  max-width: 300px;
+  background-color: #222222;
+  border-radius: 50%;
+
+  div img {
+    width: 100%;
+  }
+}
+
+.row {
+  margin: 0;
+}
+
+.carousel {
+  width: 100%;
+
+  .carousel-item {
+    width: 100%;
+    height: 40vh;
+    position: relative;
+
+    img {
+      height: 100%;
+      width: auto;
+      margin: 0 auto;
+      object-fit: contain;
+      display: inline-block;
+    }
+
+    .carousel-caption {
+      background-color: rgba(0,0,0, .5);
+      color: #ffffff;
+      border-radius: 15px;
+    }
+  }
+
+  .carousel-control-prev, .carousel-control-next {
+    color: #000000;
+    background-color: #ffffff;
+  }
+}
+
+.btn {
+  margin-left: 10px;
+  margin-right: 10px;
+
+  &.input-group-text {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+nav {
+  .ml-auto {
+    .dropdown-menu {
+      right: 0;
+      left: unset;
+    }
+  }
+}
+
+.news {
+  padding: 15px;
+
+  .newsImage {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+
+.alert-link {
+  &.active {
+    i {
+      font-weight: 900;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+}
+
+.fav-img {
+  max-width: 10vw;
+}
