--- a/src/index.scss
+++ b/src/index.scss
@@ -46,7 +46,7 @@ code {
     }
 
     .carousel-caption {
-      background-color: rgba(0,0,0, .5);
+      background-color: rgba(40, 167, 69, .6); //rgba(0,0,0, .5);
       color: #ffffff;
       border-radius: 15px;
     }
@@ -93,6 +93,12 @@ nav {
       text-decoration: underline;
       cursor: pointer;
     }
+  }
+}
+
+.fa {
+  span {
+    font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   }
 }
 
