--- a/src/index.scss
+++ b/src/index.scss
@@ -75,6 +75,14 @@ nav {
       left: unset;
     }
   }
+
+  .nav-link {
+    font-size: 18px;
+
+    .inRound {
+      padding: 5px;
+    }
+  }
 }
 
 .news {
