--- a/src/index.scss
+++ b/src/index.scss
@@ -37,8 +37,13 @@ code {
     height: 40vh;
     position: relative;
 
+    &.height-auto {
+      height: auto;
+    }
+
     img {
       height: 100%;
+      max-height: 250px;
       width: auto;
       margin: 0 auto;
       object-fit: contain;
