--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,37 @@ code {
   }
 }
 
+.mainImage {
+  margin-top: 15px;
+  margin-bottom: 15px;
+
+  h1 {
+    font-style: italic;
+  }
+
+  p {
+    margin-bottom: 0;
+  }
+
+  a {
+    color: rgba(40, 167, 69, 1);
+
+    &.iconButtons {
+      background-color: rgba(40, 167, 69, 1);
+      color: #ffffff;
+      padding: 10px;
+      border-radius: 50%;
+      width: auto;
+      margin-right: 15px;
+
+      .inRound {
+        margin-legt: 3px;
+        line-height: 48px;
+      }
+    }
+  }
+}
+
 .card-img-top-250 {
   max-height: 150px;
   width: auto;
