--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: -apple-system, BlinkMacSystemFont, "Arial", "Roboto", "Segoe UI", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
   sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -59,7 +59,7 @@ code {
       margin-right: 15px;
 
       .inRound {
-        margin-legt: 3px;
+        margin-left: 3px;
         line-height: 48px;
       }
     }
@@ -115,9 +115,24 @@ code {
   margin-left: 10px;
   margin-right: 10px;
 
+  &.btn-basket {
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   &.input-group-text {
     margin-left: 0;
     margin-right: 0;
+  }
+  .btn-label {
+    font-size: .7rem;
+    padding-right: 5px;
   }
 }
 
