--- a/src/index.scss
+++ b/src/index.scss
@@ -70,7 +70,8 @@ code {
   position: relative;
   cursor: pointer;
   text-transform: uppercase;
-  border-right: 1px solid #ffffff;
+  border-right: 1px solid #c3c3c3;
+  padding-right: 2.5rem !important;
 }
 
 .catalog_main {
@@ -78,9 +79,24 @@ code {
   top: 100%;
   left: 0px;
   z-index: 3;
+  & .alert-success {
+    background-color: #ffffff;
+  }
 }
-.catalog_sub {
-
+.collapse {
+  
+  & .show {
+    position: absolute;
+    background-color: #ffffff;
+    border: 1px solid #c4e7cc;
+    width: 70%;
+    left: 100%;
+    top: 0;
+    .collapsed & {
+      display: none;
+    }
+  }
+  
 }
 
 .dropdown-share {
@@ -160,6 +176,7 @@ code {
       background-color: rgba(40, 167, 69, .6); //rgba(0,0,0, .5);
       color: #ffffff;
       border-radius: 15px;
+      z-index: 1;
     }
   }
 
@@ -195,6 +212,8 @@ code {
 }
 
 nav {
+  box-shadow: 0 0 20px -5px #c3c3c3;
+  
   .ml-auto {
     .dropdown-menu {
       right: 0;
@@ -210,6 +229,24 @@ nav {
     }
   }
 }
+.search-form {
+  .form-check {
+    display: none;
+  }
+  &:hover .form-check {
+    display: inline-block;
+    position: absolute;
+    top: 50px;
+    left: 1px;
+    text-align: left;
+  }
+  .form-check-label {
+    cursor: pointer;
+  
+  }
+  
+}
+
 
 .news {
   padding: 15px;
