--- a/src/index.scss
+++ b/src/index.scss
@@ -119,26 +119,13 @@ code {
   }
 }
 
-.card-img-top-250 {
-  min-height: 150px;
-  max-height: 150px !important;
-  max-width: auto !important;
-  width: auto;
-  object-fit: contain;
-}
-
 .card-position {
   position: relative;
 }
 
 .card {
-  & .card-title {
-    max-height: 3rem;
-    min-height: 3rem;
-    width: 100%;
-    overflow: hidden;
-  }
-  &:hover {
+  &.hover {
+    opacity: 0;
     z-index: 1;
     position: absolute;
     top: 0;
@@ -149,7 +136,79 @@ code {
       max-height: inherit;
       overflow: visible;
     }
+  }
+
+  &.tile {
+    .card-img-top-250 {
+      min-width: 150px;
+      width: 150px;
+      min-height: 150px;
+      height: auto;
+      object-fit: contain;
+    }
+  }
+  
+  &.list {
+    flex-direction: row;
+    justify-content: space-between;
+    
+    & .card-img-top-250 {
+      width: 150px;
+      min-width: 150px;
+      height: auto;
+    }
+    & .card-body {
+      justify-content: space-between;
+
+      & .card-title {
+        margin-bottom: 0;
+      }
+      & .card-text {
+        margin-bottom: 0;
+      }
+
+      & .card-controls {
+        margin-top: 1rem;
+      }
+    }
+  }
+
+  & .card-title {
+    max-height: 3rem;
+    min-height: 3rem;
+    width: 100%;
+    overflow: hidden;
+  }
+  &:hover {
+    opacity: 1
   }  
+}
+
+.products-toolbar {
+  
+  & .products-toolbar-group {
+    background-color: #ffffff;
+    box-shadow: 0px 0px 10px 1px #c7c7c7;
+    min-height: 3rem;
+    align-items: center;
+  }
+  & .products-toolbar-item {
+    list-style: none;
+    
+    &__text {
+      font-size: .8rem;
+      text-decoration: none;
+      color: #c4c4c4
+    }
+    &__selected {
+      font-size: .8rem;
+      text-decoration: none;
+      color: #27b803;
+    }
+    & #dropdownMenuLink::after {
+      color: #27b803;
+    }
+  }
 }
 
 .row {
