--- a/src/index.scss
+++ b/src/index.scss
@@ -38,30 +38,79 @@ code {
 .mainImage {
   margin-top: 15px;
   margin-bottom: 15px;
-
+  
   h1 {
-    font-style: italic;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    color: rgba(40, 167, 69, 1);
+  }
+
+  h2 {
+    font-weight: 600;
+    font-size: .7rem;
+    text-transform: uppercase;
+    color: rgba(40, 167, 69, 1);
   }
 
   p {
     margin-bottom: 0;
   }
-
+  
   a {
+    text-decoration: none;
+    font: 800 .9rem 'Roboto', sans-serif;
     color: rgba(40, 167, 69, 1);
+
 
     &.iconButtons {
       background-color: rgba(40, 167, 69, 1);
+      position: relative;
       color: #ffffff;
       padding: 10px;
       border-radius: 50%;
       width: auto;
       margin-right: 15px;
-
-      .inRound {
-        margin-left: 3px;
-        line-height: 48px;
+      
+      & .badge {
+        position: absolute;
+        top: -.2rem;
+        right: -.2rem;
+        border-radius: 50%;
       }
+    }
+  }
+
+  .street-addres {
+    font: 600 .8rem 'Roboto', sans-serif;
+  }
+
+  .shedule {
+    cursor: pointer;
+    font: 800 .9rem 'Roboto', sans-serif;
+    color: rgba(40, 167, 69, 1);
+    
+    text-decoration: underline;
+    text-decoration-style: dotted;
+
+    & + .shedule-tooltip {
+      display: none;
+    }
+
+    &:hover + .shedule-tooltip {
+      z-index: 2;
+      display: block;
+      font: .9rem 'Roboto', sans-serif;
+      text-align: left;
+      background-color: #ffffff;
+      border-radius: .1rem;
+      box-shadow: 0px 0px 10px 1px #c7c7c7;
+      padding: 1rem;
+      z-index: 2;
+      position: absolute;
+      top: 1.5rem;
+      left: 4rem;
     }
   }
 }
@@ -83,9 +132,10 @@ code {
     background-color: #ffffff;
   }
 }
-.collapse {
+
+.catalog_main .collapse {
   
-  & .show {
+  &.show {
     position: absolute;
     background-color: #ffffff;
     border: 1px solid #c4e7cc;
@@ -105,7 +155,7 @@ code {
 }
 
 .dropdown-share {
-  .dropdown-menu {
+  & .dropdown-menu {
     &.share {
     padding: 10px;
     padding-left: 20px;
@@ -318,11 +368,8 @@ nav {
     position: absolute;
     top: -30px;
     left: 0;
-    
   }
-  .form-check-input {
-    
-  }
+  
   .form-check-label {
     cursor: pointer;
     font-size: .7rem;
