--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,14 @@ code {
   monospace;
 }
 
+h3 > a {
+  color: #000000;
+  &:hover {
+    color: #000000;
+    text-decoration: none;
+  }
+}
+
 .loadingBlock {
   width: 80%;
   margin: 0 auto;
@@ -203,7 +211,7 @@ code {
 .card {
   &.hover {
     opacity: 0;
-    z-index: 1;
+    z-index: 2;
     position: absolute;
     top: 0;
     left: 0;
@@ -257,7 +265,8 @@ code {
     overflow: hidden;
   }
   &:hover {
-    opacity: 1
+    opacity: 1;
+    z-index: 5;
   }
   & .dropdown-share {
     position: absolute;
@@ -341,6 +350,16 @@ code {
   .carousel-control-prev, .carousel-control-next {
     color: #000000;
     background-color: #ffffff;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .carousel {
+    .carousel-item {
+      img {
+        width: 75%;
+      }
+    }
   }
 }
 
