--- a/src/index.scss
+++ b/src/index.scss
@@ -357,7 +357,7 @@ h3 > a {
 }
 
 .product-page {
-  height: 65vh;
+  min-height: 65vh;
   & .image-gallery {
     min-width: 270px;
     max-width: 60%;
@@ -516,13 +516,7 @@ nav.navbar {
     margin: 0 auto;
   }
 }
-.fixed-top .alert {
-  overflow-y: scroll;
 
-  & .show {
-    position: sticky;
-  }
-}
 .alert {
   padding: 0;
   border-color: #c7c7c7;
