--- a/src/index.scss
+++ b/src/index.scss
@@ -43,104 +43,6 @@ h3 > a {
   ) 1 100%;
 }
 
-.mainImage {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  
-  h1 {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 2rem;
-    text-transform: uppercase;
-    color: rgba(40, 167, 69, 1);
-  }
-  @media screen and (max-width: 767px){
-    & h1 {
-      font-size: 1.5rem;
-    }
-  }
-
-  h2 {
-    font-weight: 600;
-    font-size: 1rem;
-    text-transform: uppercase;
-    color: rgba(40, 167, 69, 1);
-  }
-
-  p {
-    margin-bottom: 0;
-  }
-  
-  a {
-    text-decoration: none;
-    font: 800 .9rem 'Roboto', sans-serif;
-    color: rgba(40, 167, 69, 1);
-
-
-    &.iconButtons {
-      background-color: rgba(40, 167, 69, 1);
-      position: relative;
-      color: #ffffff;
-      padding: 10px;
-      border-radius: 50%;
-      width: auto;
-      margin-right: 15px;
-      
-      & .badge {
-        position: absolute;
-        top: -.2rem;
-        right: -.2rem;
-        border-radius: 50%;
-      }
-    }
-  }
-
-  .street-addres {
-    font: 600 .8rem 'Roboto', sans-serif;
-  }
-
-  .shedule {
-    cursor: pointer;
-    font: 800 .9rem 'Roboto', sans-serif;
-    color: rgba(40, 167, 69, 1);
-    
-    text-decoration: underline;
-    text-decoration-style: dotted;
-
-    & + .shedule-tooltip {
-      display: none;
-    }
-
-    &:hover + .shedule-tooltip {
-      z-index: 2;
-      display: block;
-      font: .9rem 'Roboto', sans-serif;
-      text-align: left;
-      background-color: #ffffff;
-      border-radius: .1rem;
-      box-shadow: 0px 0px 10px 1px #c7c7c7;
-      padding: 1rem;
-      z-index: 2;
-      position: absolute;
-      top: 20px;
-      left: 25%;
-      @media screen and (max-width: 768px) {
-        top: 20px;
-        left: 40%;  
-      }
-      @media screen and (max-width: 600px) {
-        top: 20px;
-        left: 30%;  
-      }
-      @media screen and (max-width: 400px) {
-        top: 20px;
-        left: 30%;  
-      }
-      
-    }
-  }
-}
-
 .empty {
   height: 56px;  
 }
@@ -607,6 +509,108 @@ nav.navbar {
     z-index: 50;
 }
 
+
+/*FIRST*/
+
+.mainImage {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  
+  h1 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: rgba(40, 167, 69, 1);
+  }
+  @media screen and (max-width: 767px){
+    & h1 {
+      font-size: 1.5rem;
+    }
+  }
+
+  h2 {
+    font-weight: 600;
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: rgba(40, 167, 69, 1);
+  }
+
+  p {
+    margin-bottom: 0;
+  }
+  
+  a {
+    text-decoration: none;
+    font: 800 .9rem 'Roboto', sans-serif;
+    color: rgba(40, 167, 69, 1);
+
+
+    &.iconButtons {
+      background-color: rgba(40, 167, 69, 1);
+      position: relative;
+      color: #ffffff;
+      padding: 10px;
+      border-radius: 50%;
+      width: auto;
+      margin-right: 15px;
+      
+      & .badge {
+        position: absolute;
+        top: -.2rem;
+        right: -.2rem;
+        border-radius: 50%;
+      }
+    }
+  }
+
+  .street-addres {
+    font: 600 .8rem 'Roboto', sans-serif;
+  }
+
+  .shedule {
+    cursor: pointer;
+    font: 800 .9rem 'Roboto', sans-serif;
+    color: rgba(40, 167, 69, 1);
+    
+    text-decoration: underline;
+    text-decoration-style: dotted;
+
+    & + .shedule-tooltip {
+      display: none;
+    }
+
+    &:hover + .shedule-tooltip {
+      z-index: 2;
+      display: block;
+      font: .9rem 'Roboto', sans-serif;
+      text-align: left;
+      background-color: #ffffff;
+      border-radius: .1rem;
+      box-shadow: 0px 0px 10px 1px #c7c7c7;
+      padding: 1rem;
+      z-index: 2;
+      position: absolute;
+      top: 20px;
+      left: 25%;
+      @media screen and (max-width: 768px) {
+        top: 20px;
+        left: 40%;  
+      }
+      @media screen and (max-width: 600px) {
+        top: 20px;
+        left: 30%;  
+      }
+      @media screen and (max-width: 400px) {
+        top: 20px;
+        left: 30%;  
+      }
+      
+    }
+  }
+}
+
+/* SECOND 
 .menuTopWrapper {
   background: url('./images/wood_background.jpg');
   background-size: cover;
@@ -617,6 +621,347 @@ nav.navbar {
   .shedule-tooltip {
     color: #000
   }
-
-  
 }
+
+.mainImage {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  
+  h1 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: rgba(40, 167, 69, 1);
+  }
+  @media screen and (max-width: 767px){
+    & h1 {
+      font-size: 1.5rem;
+    }
+  }
+
+  h2 {
+    font-weight: 600;
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: rgba(40, 167, 69, 1);
+  }
+
+  p {
+    margin-bottom: 0;
+  }
+  
+  a {
+    text-decoration: none;
+    font: 800 .9rem 'Roboto', sans-serif;
+    color: rgba(40, 167, 69, 1);
+
+
+    &.iconButtons {
+      background-color: rgba(40, 167, 69, 1);
+      position: relative;
+      color: #ffffff;
+      padding: 10px;
+      border-radius: 50%;
+      width: auto;
+      margin-right: 15px;
+      
+      & .badge {
+        position: absolute;
+        top: -.2rem;
+        right: -.2rem;
+        border-radius: 50%;
+      }
+    }
+  }
+
+  .street-addres {
+    font: 600 .8rem 'Roboto', sans-serif;
+  }
+
+  .shedule {
+    cursor: pointer;
+    font: 800 .9rem 'Roboto', sans-serif;
+    color: rgba(40, 167, 69, 1);
+    
+    text-decoration: underline;
+    text-decoration-style: dotted;
+
+    & + .shedule-tooltip {
+      display: none;
+    }
+
+    &:hover + .shedule-tooltip {
+      z-index: 2;
+      display: block;
+      font: .9rem 'Roboto', sans-serif;
+      text-align: left;
+      background-color: #ffffff;
+      border-radius: .1rem;
+      box-shadow: 0px 0px 10px 1px #c7c7c7;
+      padding: 1rem;
+      z-index: 2;
+      position: absolute;
+      top: 20px;
+      left: 25%;
+      @media screen and (max-width: 768px) {
+        top: 20px;
+        left: 40%;  
+      }
+      @media screen and (max-width: 600px) {
+        top: 20px;
+        left: 30%;  
+      }
+      @media screen and (max-width: 400px) {
+        top: 20px;
+        left: 30%;  
+      }
+      
+    }
+  }
+}
+*/
+
+
+/*THIRD
+$fontColor: rgba(47, 47, 47, 0.897);
+$iconColor: #fff;
+
+
+.menuTopWrapper {
+  background-color: rgba(0, 0, 0, 0.080);
+}
+
+
+.mainImage {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  
+  h1 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: $fontColor;
+  }
+  @media screen and (max-width: 767px){
+    & h1 {
+      font-size: 1.5rem;
+    }
+  }
+
+  h2 {
+    font-weight: 600;
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: $fontColor;
+  }
+
+  p {
+    margin-bottom: 0;
+    
+  }
+  .fa-phone {
+    line-height: 10px; 
+  }
+  i {
+    color: $fontColor;
+  }
+  
+  a {
+    text-decoration: none;
+    font: 800 .9rem 'Roboto', sans-serif;
+    color: $fontColor;
+
+
+    &.iconButtons {
+      background-color: $fontColor;
+      position: relative;
+      color: $fontColor;
+      padding: 10px;
+      border-radius: 50%;
+      width: auto;
+      margin-right: 15px;
+      & i {
+        color: $iconColor
+      }
+      
+      & .badge {
+        position: absolute;
+        top: -.2rem;
+        right: -.2rem;
+        border-radius: 50%;
+      }
+    }
+  }
+
+  .street-addres {
+    font: 600 .8rem 'Roboto', sans-serif;
+    color: $fontColor;
+    margin-top: .5rem;
+  }
+
+  .shedule {
+    cursor: pointer;
+    font: 800 .9rem 'Roboto', sans-serif;
+    color: $fontColor;
+    
+    text-decoration: underline;
+    text-decoration-style: dotted;
+
+    & + .shedule-tooltip {
+      display: none;
+    }
+
+    &:hover + .shedule-tooltip {
+      z-index: 2;
+      display: block;
+      font: .9rem 'Roboto', sans-serif;
+      text-align: left;
+      background-color: #ffffff;
+      border-radius: .1rem;
+      box-shadow: 0px 0px 10px 1px #c7c7c7;
+      padding: 1rem;
+      z-index: 2;
+      position: absolute;
+      top: 20px;
+      left: 25%;
+      @media screen and (max-width: 768px) {
+        top: 20px;
+        left: 40%;  
+      }
+      @media screen and (max-width: 600px) {
+        top: 20px;
+        left: 30%;  
+      }
+      @media screen and (max-width: 400px) {
+        top: 20px;
+        left: 30%;  
+      }
+      
+    }
+  }
+}*/
+
+
+/*FOURTH
+
+
+$fontColor: rgb(100, 155, 112);
+$iconColor: #fff;
+
+
+.menuTopWrapper {
+  //background-color: rgba(0, 0, 0, 0.080);
+  background: url('./images/mainTopBackground.png') repeat-x;
+}
+
+
+.mainImage {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  
+  h1 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: $fontColor;
+  }
+  @media screen and (max-width: 767px){
+    & h1 {
+      font-size: 1.5rem;
+    }
+  }
+
+  h2 {
+    font-weight: 600;
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: $fontColor;
+  }
+
+  p {
+    margin-bottom: 0;
+    
+  }
+  
+  i {
+    color: $fontColor;
+  }
+  
+  a {
+    text-decoration: none;
+    font: 800 .8rem 'Roboto', sans-serif;
+    color: $fontColor;
+
+
+    &.iconButtons {
+      background-color: $fontColor;
+      position: relative;
+      color: $fontColor;
+      padding: 10px;
+      border-radius: 50%;
+      width: auto;
+      margin-right: 15px;
+      & i {
+        color: $iconColor
+      }
+      
+      & .badge {
+        position: absolute;
+        top: -.2rem;
+        right: -.2rem;
+        border-radius: 50%;
+      }
+    }
+  }
+
+  .street-addres {
+    font: 600 .8rem 'Roboto', sans-serif;
+    color: $fontColor;
+    margin-top: .5rem;
+  }
+
+  .shedule {
+    cursor: pointer;
+    font: 800 .9rem 'Roboto', sans-serif;
+    color: $fontColor;
+    
+    text-decoration: underline;
+    text-decoration-style: dotted;
+
+    & + .shedule-tooltip {
+      display: none;
+    }
+
+    &:hover + .shedule-tooltip {
+      z-index: 2;
+      display: block;
+      font: .9rem 'Roboto', sans-serif;
+      text-align: left;
+      background-color: #ffffff;
+      border-radius: .1rem;
+      box-shadow: 0px 0px 10px 1px #c7c7c7;
+      padding: 1rem;
+      z-index: 2;
+      position: absolute;
+      top: 20px;
+      left: 25%;
+      @media screen and (max-width: 768px) {
+        top: 20px;
+        left: 40%;  
+      }
+      @media screen and (max-width: 600px) {
+        top: 20px;
+        left: 30%;  
+      }
+      @media screen and (max-width: 400px) {
+        top: 20px;
+        left: 30%;  
+      }
+      
+    }
+  }
+}
+*/
