--- a/src/index_.scss
+++ b/src/index_.scss
@@ -11,7 +11,8 @@ $footer_height: 580px;
 
     hr {
         border-bottom: 1px solid #465D68;
-        margin: 15px;
+        margin: 30px 15px;
+        width: 100%;
     }
 
     & .footer-group {
@@ -74,17 +75,47 @@ $footer_height: 580px;
         list-style: none;
         padding: 20px 0;
         max-height: $footer_height *.85;
+
+
+        &::-webkit-scrollbar {
+            width: 3px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background: #229DD2;
+        }
+        
+        &::-webkit-scrollbar-thumb:hover {
+            background: #25779b;
+        }
         
         
         & .catalog-list__item {
             margin: 10px 0;
             width: 25%;
             display: flex;
+            position: relative;
 
             &:first-child {
                 text-transform: uppercase;
                 font-weight: bold;
-                
+
+
+                & span {
+                    padding-left: 25px;
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        left: -25px;
+                        background-image: url('./images/icons/factory.png');
+                        width: 20px;
+                        height: 20px;
+                        margin-left: 25px;
+                        
+                    }
+                }
+
                 & .catalog-list__item-text {
                     color: #229DD2;
                     width: auto;
@@ -114,12 +145,15 @@ $footer_height: 580px;
         
         &-row-wrap {
             display: flex;
-            flex-direction: column;
             flex-flow: column wrap;
             max-height: 60px;
             justify-content: flex-start;
             align-items: flex-start;
+            align-content: space-between;
             margin-bottom: 15px;
+            &:first-child {
+                padding-right: 50px;
+            }
         }
 
         & .footer-contacts__social {
@@ -227,6 +261,7 @@ $footer_height: 580px;
         &_attention {
             text-align: left;
             margin-top: 40px;
+            padding-bottom: 20px;
 
             &::before {
                 background-image: url('./images/icons/warning.png');
@@ -241,14 +276,41 @@ $footer_height: 580px;
         flex-flow: row wrap;
         justify-content: space-between;
     }
-}
 
+    .footer-copyright {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        width: 100%;
+        margin: 10px 15px;
+        font-size: 14px;
+        color: $link_color_inactive;
+
+        & .copyright__text {
+            margin: 0;
+        }
+        .copyright__privacy-link {
+            color: $link_color_inactive;
+            text-decoration: underline;
+        }
+        .copyright__unknown-blocks {
+            display: flex;
+            flex-flow: row nowrap;
+            & span {
+                width: 40px;
+                height: 16px;
+                background-color: $link_color_inactive;
+                margin-right: 5px;
+            }
+        }
+    }
+}
 
 
 
 @media screen and(max-width: 1660px) {
     .footer .footer-catalog {
-        min-height: $footer_height *1.2;
+        max-height: $footer_height;
         
     }
 }
@@ -257,40 +319,110 @@ $footer_height: 580px;
     .footer {
         flex-direction: column;
 
+        .footer-catalog {
+            max-height: $footer_height *1.5;
+            
+            & .catalog-list__item {
+                width: 33%;
+                margin-right: 20px;
+            }
+        }
+
         & .footer-group__title {
             margin-bottom: 20px;
         }
     }
 }
 
-@media screen and(max-width: 1140px) {
-    .footer .footer-catalog {
-        min-height: $footer_height *1.5;
-        
-        & .catalog-list__item {
-            width: 33%;
-            margin-right: 20px;
-        }
-    }
-}
-
 @media screen and(max-width: 600px) {
     .footer {
-        padding: 35px 30px;
+        padding: 30px 30px;
+
+        .hr {
+            display: none;
+        }
+
+        & .footer-group {
+           & .footer-group__title {
+                justify-content: space-between;
+                
+                &::before, &::after {
+                    content: '';
+                    position: absolute;
+                    border-bottom: 1px solid #465D68;
+                    width: 92%;
+                    margin: 0 4%;
+                    
+                }
+                &::before {
+                    top: 50px;
+                    left: 0;
+                }
+                &::after {
+                    display: none;
+                }
+                
+               
+            }
+            &:first-child .footer-group__title::after {
+                bottom: 5px;
+                left: 0;
+                display: block;
+            }
+
+        }
 
         & .footer-catalog {
-            max-height: $footer_height *2.2;
+            max-height: 400px;
+            padding-top: 0;
+            flex-wrap: nowrap;
+            overflow-y: scroll;
 
             & .catalog-list__item {
-                width: 50%;
-                margin-right: 20px;
+                width: 100%;
+                
+            }
+        }
+
+        & .footer-contacts {
+            &-row-wrap {
+                align-content: flex-start;
+                max-height: 120px;
+                &:first-child {
+                    padding: 0;
+                }
+            }
+
+            & .footer-contacts__social {
+                padding: 0;
+                flex-direction: column;
+                align-content: center;
+                align-items: center;
             }
         }
 
         .footer-group {
             &__toggle-btn {
                 background: none;
+                justify-content: flex-end;
             }
+        }
+
+        .footer__link {
+            padding-left: 10px;
+            &_tel:not(:first-child) {
+                &::before {
+                    background-image: none;
+                }
+            }
+        }
+
+        .footer-copyright {
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            margin: 20px 0;
+            height: 100px;
         }
         
     }
